--- a/Awesomium-drag-bug/MainWindow.xaml
+++ b/Awesomium-drag-bug/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Awesomium_drag_bug"
+        xmlns:awe="http://schemas.awesomium.com/winfx"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="600" Width="800">
     <Grid>
-        
+        <awe:WebControl Source="https://mrmitch.github.io/awesomium-drag-bug/"></awe:WebControl>
     </Grid>
 </Window>
